include/grx-3.0.h

typedef struct _GrxContext      GrxContext;
/* ================================================================== */
/*                        SYSTEM TYPE DEF's                           */
/* ================================================================== */

/* need unsigned 32 bit integer for color stuff */
typedef guint32 GrxColor;
extern const struct _GR_contextInfo {
    GrxContext current;         /* the current context */
    GrxContext screen;          /* the screen context */
} * const GrContextInfo;
/*
 * color system info structure (all [3] arrays are [r,g,b])
 */
extern const struct _GR_colorInfo {
        GrxColor       ncolors;              /* number of colors */
        GrxColor       nfree;                /* number of unallocated colors */
        GrxColor       black;                /* the black color */
        GrxColor       white;                /* the white color */
        unsigned int  RGBmode;              /* set when RGB mode */
        unsigned int  prec[3];              /* color field precisions */
        unsigned int  pos[3];               /* color field positions */
        unsigned int  mask[3];              /* masks for significant bits */
        unsigned int  round[3];             /* add these for rounding */
        unsigned int  shift[3];             /* shifts for (un)packing color */
        unsigned int  norm;                 /* normalization for (un)packing */
        struct {                            /* color table for non-RGB modes */
                unsigned char r,g,b;            /* loaded components */
                unsigned int  defined:1;        /* r,g,b values are valid if set */
                unsigned int  writable:1;       /* can be changed by 'GrSetColor' */
                unsigned long int nused;        /* usage count */
        } ctable[256];
} * const GrColorInfo;
void    GrSetColor(GrxColor c,int r,int g,int b);
#define GR_CTABLE_SIZE(table) (                                                \
        (table) ? (unsigned int)((table)[0]) : 0U                              \
)
#define GR_CTABLE_COLOR(table,index) (                                         \
        ((unsigned)(index) < GR_CTABLE_SIZE(table)) ?                          \
        (table)[((unsigned)(index)) + 1] :                                     \
        GRX_COLOR_NONE                                                         \
)
#define GR_CTABLE_ALLOCSIZE(ncolors)    ((ncolors) + 1)
typedef struct {                        /* framed box colors */
        GrxColor fbx_intcolor;
        GrxColor fbx_topcolor;
        GrxColor fbx_rightcolor;
        GrxColor fbx_bottomcolor;
        GrxColor fbx_leftcolor;
} GrFBoxColors;
void GrClearScreen(GrxColor bg);
void GrClearContext(GrxColor bg);
void GrClearClipBox(GrxColor bg);
void GrPlot(int x,int y,GrxColor c);
void GrLine(int x1,int y1,int x2,int y2,GrxColor c);
void GrHLine(int x1,int x2,int y,GrxColor c);
void GrVLine(int x,int y1,int y2,GrxColor c);
void GrBox(int x1,int y1,int x2,int y2,GrxColor c);
void GrFilledBox(int x1,int y1,int x2,int y2,GrxColor c);
void GrFramedBox(int x1,int y1,int x2,int y2,int wdt,const GrFBoxColors *c);
int  GrGenerateEllipse(int xc,int yc,int xa,int ya,int points[GR_MAX_ELLIPSE_POINTS][2]);
int  GrGenerateEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int points[GR_MAX_ELLIPSE_POINTS][2]);
void GrLastArcCoords(int *xs,int *ys,int *xe,int *ye,int *xc,int *yc);
void GrCircle(int xc,int yc,int r,GrxColor c);
void GrEllipse(int xc,int yc,int xa,int ya,GrxColor c);
void GrCircleArc(int xc,int yc,int r,int start,int end,int style,GrxColor c);
void GrEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrxColor c);
void GrFilledCircle(int xc,int yc,int r,GrxColor c);
void GrFilledEllipse(int xc,int yc,int xa,int ya,GrxColor c);
void GrFilledCircleArc(int xc,int yc,int r,int start,int end,int style,GrxColor c);
void GrFilledEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrxColor c);
void GrPolyLine(int numpts,int points[][2],GrxColor c);
void GrPolygon(int numpts,int points[][2],GrxColor c);
void GrFilledConvexPolygon(int numpts,int points[][2],GrxColor c);
void GrFilledPolygon(int numpts,int points[][2],GrxColor c);
void GrBitBlt(GrxContext *dst,int x,int y,GrxContext *src,int x1,int y1,int x2,int y2,GrxColor op);
void GrBitBlt1bpp(GrxContext *dst,int dx,int dy,GrxContext *src,int x1,int y1,int x2,int y2,GrxColor fg,GrxColor bg);
void GrFloodFill(int x, int y, GrxColor border, GrxColor c);
void GrFloodSpill(int x1, int y1, int x2, int y2, GrxColor old_c, GrxColor new_c);
void GrFloodSpill2(int x1, int y1, int x2, int y2, GrxColor old_c1, GrxColor new_c1, GrxColor old_c2, GrxColor new_c2);
GrxColor GrPixel(int x,int y);
/* Input   ctx: source context, if NULL the current context is used */
/*         x1 : first x coordinate read                             */
/*         x2 : last  x coordinate read                             */
/*         yy : y coordinate                                        */
/* Output  NULL     : error / no data (clipping occured)            */
/*         else                                                     */
/*           p[0..w]: pixel values read                             */
/*                      (w = |x2-y1|)                               */
/*           Output data is valid until next GRX call !             */

void GrPutScanline(int x1,int x2,int yy,const GrxColor *c, GrxColor op);
GrxColor GrUsrPixelC(GrxContext *c,int x,int y);
/* The PNM functions */

int GrSaveContextToPbm( GrxContext *grc, char *pbmfn, char *docn );
int GrSaveContextToPgm( GrxContext *grc, char *pgmfn, char *docn );
int GrSaveContextToPpm( GrxContext *grc, char *ppmfn, char *docn );
int GrLoadContextFromPnm( GrxContext *grc, char *pnmfn );
int GrLoadContextFromPnmBuffer( GrxContext *grc, const char *buffer );
int GrSaveContextToPng( GrxContext *grc, char *pngfn );
int GrLoadContextFromPng( GrxContext *grc, char *pngfn, int use_alpha );
int GrLoadContextFromJpeg( GrxContext *grc, char *jpegfn, int scale );
int GrSaveContextToJpeg( GrxContext *grc, char *jpegfn, int quality );
int GrSaveContextToGrayJpeg( GrxContext *grc, char *jpegfn, int quality );
        

/* ================================================================== */
/*                        TIFF ADDON FUNCTIONS                        */
/*  these functions may not be installed or available on all system   */
/* ================================================================== */

/*
** SaveContextToTiff - Dump a context in a TIFF file
**
** Arguments:
**   cxt:   Context to be saved (NULL -> use current context)
**   tiffn: Name of tiff file
**   compr: Compression method (see tiff.h), 0: automatic selection
**   docn:  string saved in the tiff file (DOCUMENTNAME tag)
**
**  Returns  0 on success
**          -1 on error
**
** requires tifflib by  Sam Leffler (sam@engr.sgi.com)
**        available at  ftp://ftp.sgi.com/graphics/tiff
*/
int SaveContextToTiff(GrxContext *cxt, char *tiffn, unsigned compr, char *docn);