bindings/vala/grx-3.0.vapi


        [CCode (cname = "GrUsrPixelC")]
        public Color user_pixel (int x, int y);

        [CCode (cname = "GrSaveContextToPbm")]
        public Result save_to_pbm (string file_name, string? comment = null);
        [CCode (cname = "GrSaveContextToPgm")]
        public Result save_to_pgm (string file_name, string? comment = null);
        [CCode (cname = "GrSaveContextToPpm")]
        public Result save_to_ppm (string file_name, string? comment = null);
        [CCode (cname = "GrLoadContextFromPnm")]
        public Result load_from_pnm (string file_name);

        [CCode (cname = "GrLoadContextFromPnmBuffer")]
        public Result load_from_pnm_buffer (char *buffer);

        [CCode (cname = "GrSaveContextToPng")]
        public Result save_to_png (string file_name);
        [CCode (cname = "GrLoadContextFromPng")]
        public Result load_from_png (string file_name, bool use_alpha = true);

        [CCode (cname = "GrLoadContextFromJpeg")]
        public Result load_from_jpeg (string file_name, int scale);

        [CCode (cname = "GrSaveContextToJpeg")]
        public Result save_to_jpeg (string file_name, int quality = 90);
        [CCode (cname = "GrSaveContextToGrayJpeg")]
        public Result save_to_gray_jpeg (string file_name, int quality = 90);

        //[CCode (cname = "SaveContextToTiff")]
        //public int to_tiff (string file_name, uint compr, string? comment = null);
    }

    [CCode (cname = "const struct _GR_contextInfo", has_type_id = false)]
    public struct ContextInfo {
        [CCode (cname = "&self.current")]
        public static Context current;
        [CCode (cname = "&self.screen")]
        public static Context screen;
    }

    [CCode (cname = "GrContextInfo")]
    public ContextInfo context_info;

    public void set_clip_box (int x1, int y1, int x2, int y2);
    public void get_clip_box (out int x1, out int y1, out int x2, out int y2);
    public void reset_clip_box ();

    public int get_max_x ();
    public int get_max_y ();
    public int get_size_x ();
    public int get_size_y ();
    public int get_low_x ();
    public int get_low_y ();
    public int get_high_x ();
    public int get_high_y ();

    [CCode (cprefix = "GRX_COLOR_MODE_", has_type_id = false)]
    [Flags]
    public enum ColorMode {
        WRITE,
        XOR,
        OR,
        AND,
        IMAGE,
        UNDERLINE_TEXT
    }

    [CCode (cname = "const struct _GR_colorInfo", has_type_id = false)]
    public struct ColorInfo {

        /**
         * number of colors
         */
        public Color ncolors;

        /**
         * number of unallocated colors
         */
        public Color nfree;

        /**
         * the black color
         */
        public Color black;

        /**
         * the white color
         */
        public Color white;

        /**
         * set when RGB mode
         */
        [CCode (cname = "RGBmode")]
        public uint rgb_mode;

        /**
         * color field precisions
         */
        public uint prec[3];

        /**
         * color field positions
         */
        public uint pos[3];

        /**
         * masks for significant bits
         */
        public uint mask[3];

        /**
         * add these for rounding
         */
        public uint round[3];

        /**
         * shifts for (un)packing color
         */
        public uint shift[3];

        /**
         * normalization for (un)packing
         */
        public uint norm;

        /**
         * color table for non-RGB modes
         */
        [CCode (array_length_cexpr = "256")]
        public ColorInfoTable[] ctable;
    }

    [CCode (has_type_id = false)]
    public struct ColorInfoTable {
        /* loaded components */
        public uchar r;
        public uchar g;
        public uchar b;

        /**
         * r, g, b values are valid if set
         */
        public uint  defined;

        /**
         * can be changed by 'GrSetColor'
         */
        public uint  writable;

        /**
         * usage count
         */
        public ulong nused;
    }

    [CCode (cname = "GrColorInfo")]
    public ColorInfo color_info;

    public const int MAX_POLYGON_POINTS;
    public const int MAX_ELLIPSE_POINTS;

    [CCode (cprefix = "GR_ARC_STYLE_", has_type_id = false)]
    public enum ArcStyle {
        OPEN,
        CLOSE1,
        CLOSE2
    }

    [CCode (cname = "GrFBoxColors", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class FramedBoxColors {
        [CCode (cname = "GrFBoxColors", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "fbx_intcolor")]
        public Color fill;
        [CCode (cname = "fbx_topcolor")]
        public Color top;
        [CCode (cname = "fbx_rightcolor")]
        public Color right;
        [CCode (cname = "fbx_bottomcolor")]
        public Color bottom;
        [CCode (cname = "fbx_leftcolor")]
        public Color left;

        [CCode (cname = "g_malloc0")]
        public FramedBoxColors (size_t size = sizeof(MallocStruct))
            requires (size == sizeof(MallocStruct));
    }

    /**
     * Color table (for primitives using several colors).
     *
     * It is an array of colors with the first element being the number of
     * colors in the table
     */
    [CCode (cname = "GrxColor", free_function = "g_free", has_type_id = false)]
    [Compact]
    public class ColorTable {
        [CCode (cname = "GrxColor", destroy_function = "", has_type_id = false)]
        struct MallocStruct {}

        [CCode (cname = "g_malloc0")]
        ColorTable.alloc (size_t size);
        public ColorTable (uint size) {
            this.alloc (alloc_size (size) * sizeof(MallocStruct));
        }

        [CCode (cname = "GR_CTABLE_SIZE")]
        public uint size ();
        [Ccode (cname = "GR_CTABLE_COLOR")]
        public Color get (uint index);

        [CCode (cname = "GR_CTABLE_ALLOCSIZE")]
        int alloc_size (uint num_colors);
    }

    /* ================================================================== */
    /*                       GRAPHICS PRIMITIVES                          */
    /* ================================================================== */

    [CCode (cname = "GrClearScreen")]
    public void clear_screen (Color bg);
    [CCode (cname = "GrClearContext")]
    public void clear_context (Color bg);
    [CCode (cname = "GrClearClipBox")]
    public void clear_clip_box (Color bg);
    [CCode (cname = "GrPlot")]
    public void plot (int x, int y, Color c);
    [CCode (cname = "GrLine")]
    public void line (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrHLine")]
    public void horiz_line (int x1, int x2, int y, Color c);
    [CCode (cname = "GrVLine")]
    public void vert_line (int x, int y1, int y2, Color c);
    [CCode (cname = "GrBox")]
    public void box (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrFilledBox")]
    public void filled_box (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrFramedBox")]
    public void framed_box (int x1, int y1, int x2, int y2, int width, FramedBoxColors c);
    public void rounded_box (int x1, int y1, int x2, int y2, int radius, Color c) {
        circle_arc (x1 + radius, y1 + radius, radius, 900, 1800, ArcStyle.OPEN, c);
        circle_arc (x2 - radius, y1 + radius, radius, 0, 900, ArcStyle.OPEN, c);
        circle_arc (x1 + radius, y2 - radius, radius, 1800, 2700, ArcStyle.OPEN, c);
        circle_arc (x2 - radius, y2 - radius, radius, 2700, 3600, ArcStyle.OPEN, c);
        horiz_line (x1 + radius, x2 - radius, y1, c);
        horiz_line (x1 + radius, x2 - radius, y2, c);
        vert_line (x1, y1 + radius, y2 - radius, c);
        vert_line (x2, y1 + radius, y2 - radius, c);
    }
    public void filled_rounded_box (int x1, int y1, int x2, int y2, int radius, Color c) {
        filled_circle_arc (x1 + radius, y1 + radius, radius, 900, 1800, ArcStyle.CLOSE2, c);
        filled_circle_arc (x2 - radius, y1 + radius, radius, 0, 900, ArcStyle.CLOSE2, c);
        filled_circle_arc (x1 + radius, y2 - radius, radius, 1800, 2700, ArcStyle.CLOSE2, c);
        filled_circle_arc (x2 - radius, y2 - radius, radius, 2700, 3600, ArcStyle.CLOSE2, c);
        filled_box (x1 + radius, y1, x2 - radius, y2, c);
        filled_box (x1, y1 + radius, x2, y2 - radius, c);
    }
    [CCode (cname = " GrGenerateEllipse")]
    public int generate_ellipse (int xc, int yc, int xa, int ya, [CCode (array_length_cexpr = "MAX_POLYGON_POINTS")]Point[] points);
    [CCode (cname = " GrGenerateEllipseArc")]
    public int  generate_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, [CCode (array_length_cexpr = "MAX_POLYGON_POINTS")]Point[] points);
    [CCode (cname = "GrLastArcCoords")]
    public void last_arc_coords (out int xs, out int ys, out int xe, out int ye, out int xc, out int yc);
    [CCode (cname = "GrCircle")]
    public void circle (int xc, int yc, int r, Color c);
    [CCode (cname = "GrEllipse")]
    public void ellipse (int xc, int yc, int xa, int ya, Color c);
    [CCode (cname = "GrCircleArc")]
    public void circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrEllipseArc")]
    public void ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrFilledCircle")]
    public void filled_circle (int xc, int yc, int r, Color c);
    [CCode (cname = "GrFilledEllipse")]
    public void filled_ellipse (int xc, int yc, int xa, int ya, Color c);
    [CCode (cname = "GrFilledCircleArc")]
    public void filled_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrFilledEllipseArc")]
    public void filled_ellipse_rc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrPolyLine")]
    public void poly_line ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrPolygon")]
    public void polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrFilledConvexPolygon")]
    public void filled_convex_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrFilledPolygon")]
    public void filled_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrBitBlt")]
    public void bit_blt (Context dest, int x, int y, Context src, int x1, int y1, int x2, int y2, ColorMode op = ColorMode.WRITE);
    [CCode (cname = "GrBitBlt1bpp")]
    public void bit_blt_1bpp (Context dest, int dx, int dy, Context src, int x1, int y1, int x2, int y2, Color fg, Color bg);
    [CCode (cname = "GrFloodFill")]
    public void flood_fill (int x, int y, Color border, Color c);
    [CCode (cname = "GrFloodSpill")]
    public void flood_spill (int x1, int y1, int x2, int y2, Color old_c, Color new_c);
    [CCode (cname = "GrFloodSpill2")]
    public void flood_spill_2 (int x1,  int y1, int x2, int y2, Color old_c1, Color new_c1, Color old_c2, Color new_c2);

    [CCode  (cname =  "GrPixel")]
    public Color pixel (int x, int y);

    [CCode  (cname =  "GrGetScanLine")]
    public Color *get_scan_line (int  x1, int x2, int yy);

    [CCode  (cname =  "GrPutScanline")]
    public void put_scan_line (int x1, int x2, int yy, [CCode (array_length = false)]Color[] c, ColorMode op = ColorMode.WRITE);

    /* ================================================================== */
    /*                 NON CLIPPING DRAWING PRIMITIVES                    */
    /* ================================================================== */
